# wormhole-schemas

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
schemas/@wormhole-foundation/native-token-transfers/: hex-payload.json  native-token-transfer.json  ntt-manager-message.json  ntt-with-payload.json  ntt.json  transceiver-message.json  wormhole-peer-registration.json  wormhole-transceiver-init.json
schemas/@wormhole-foundation/token-bridge/: attest-meta.json  register-chain.json  transfer-with-payload.json  transfer.json  upgrade-contract.json
schemas/@wormhole-foundation/wormhole/: contract-upgrade.json  guardian-key.json  guardian-set-update.json  guardian-signature.json  set-message-fee.json  transfer-fees.json  vaa-body.json  vaa-header.json  vaa.json
schemas/@wormholelabs-xyz/ripple/: onboard.json  register-peer.json  release.json  route.json  ticket-confirmation.json  ticket-range.json  ticket-refill.json  xrpl-account.json
src/: fetch.rs  lib.rs  main.rs  parse.rs  refs.rs  registry.rs  schema.rs  serialize.rs  sync.rs
tests/: cli.rs  golden.rs  integration.rs
