[package]
name = "wormhole-schemas"
version = "0.1.0"
edition = "2021"

[features]
default = []
fetch = ["ureq"]

[[bin]]
name = "wsch"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
ureq = { version = "2", features = ["json"], optional = true }
bs58 = "0.5"
hex = "0.4"
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
hex = "0.4"
