[package]
name = "wormhole-schemas"
version = "0.1.0"
edition = "2021"

[features]
default = ["sign"]
sign = ["dep:libsecp256k1", "dep:sha3"]
fetch = ["ureq"]

[[bin]]
name = "wsch"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
ureq = { version = "2", features = ["json"], optional = true }
bs58 = "0.5"
hex = "0.4"
ethnum = "1"
sha2 = "0.10"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
libsecp256k1 = { version = "0.7", optional = true }
sha3 = { version = "0.10", optional = true }
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
hex = "0.4"
